--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.1",
+    "react-router-dom": "^7.5.1",
     "react-switch": "^7.1.0"
   },
   "devDependencies": {
